# slm-local-server

./: .gitignore  README.md  pyproject.toml
references/: .gitignore  README.md  index.html  main.py  requirements.txt
references/config/: models.yaml
references/routers/: chat.py  conversations.py  models.py
references/tests/: test_api.py
references/utils/: config_loader.py  model_loader.py
src/: app.py  config.py  main.py  memory_manager.py  model.py  model.yaml  model_provider.py  package.py  schemas.py
src/enhanced_npc/: character_info.yml  characters.py  config.py
